--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 {
   "compilerOptions": {
     "target": "es2016", // 指定ECMAScript目标版本
-    "module": "commonjs", // 指定模块化类型
+    "module": "ESNext", // 指定模块化类型
     "declaration": true, // 生成 `.d.ts` 文件
     "outDir": "./dist", // 编译后生成的文件目录
     "strict": true, // 开启严格的类型检测
@@ -11,7 +11,7 @@
     "baseUrl": ".",
     "jsx": "react",
     "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node",
+    "moduleResolution": "Classic",
     "rootDirs": ["/lib", "./typings"],
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
@@ -21,15 +21,10 @@
     "experimentalDecorators": true,
     "paths": {
       "@/*": ["./src/*"],
-      "@@/*": ["./src/.umi/*"],
-      "@components/*": ["./src/components/*"],
-      "@services/*": ["./src/services/*"],
-      "@models/*": ["./src/models/*"],
-      "@layouts/*": ["./src/layouts/*"],
       "@utils/*": ["./src/utils/*"],
       "@assets/*": ["./src/assets/*"],
-      "@styles/*": ["./src/styles/*"]
-    }
+    },
+    "removeComments":true, // 删除注释 
   },
   "include": ["./lib", "./typings"],
   "exclude": [
