--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {},
   "devDependencies": {
     "chai": "^4.3.6",
+    "jsdom": "^19.0.0",
     "mocha": "^9.2.2",
     "typescript": "^4.6.3"
   }
