--- a/package.json
+++ b/package.json
@@ -1,29 +1,41 @@
 {
   "name": "@wyny/crypto",
-  "version": "1.0.0",
+  "private": true,
+  "version": "1.0.3",
   "description": "aes+rsa加解密工具",
-  "main": "dist/index.js",
-  "scripts": {
-    "build": "tsc",
-    "cp": "cp -r ./dist ./viewKit/",
-    "preview": "yarn build && yarn cp",
-    "test": "echo \" -------run test---------- \"",
-    "release": "np --no-yarn --no-2fa --branch main"
-  },
-  "keywords": [
-    "typescript"
-  ],
-  "publishConfig": {
-    "registry": "http://172.16.11.82:4873/"
+  "main": "./dist/crypto.umd.js",  
+  "module": "./dist/crypto.es.js",
+  "exports": { 
+    ".": { 
+        "import": "./dist/crypto.es.js",
+        "require": "./dist/crypto.umd.js"
+    } 
   },
   "type": "module",
   "author": "wangqs",
   "license": "ISC",
-  "dependencies": {},
+  "keywords": [
+    "typescript",
+    "vite",
+    "crypto"
+  ],
+  "scripts": {
+    "build": "vite build",
+    "start": "yarn build && vite",
+    "cp": "mkdir viewKit && cp -r ./dist ./viewKit/ &&cp -r ./index.html ./viewKit/",
+    "preview": "yarn build && yarn cp",
+    "test": "echo \" -------run test---------- \"",
+    "release": "np --no-yarn --no-2fa --branch main"
+  },
+  "publishConfig": {
+    "registry": "http://172.16.11.82:4873/"
+  },
+  "dependencies": {
+    "vue": "^3.2.31"
+  },
   "devDependencies": {
-    "chai": "^4.3.6",
-    "jsdom": "^19.0.0",
-    "mocha": "^9.2.2",
-    "typescript": "^4.6.3"
+    "@vitejs/plugin-vue": "^2.3.0",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.0"
   }
 }
