--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "private": true,
   "version": "1.0.3",
   "description": "aes+rsa加解密工具",
-  "main": "./dist/crypto.umd.js",  
+  "main": "./dist/crypto.umd.js",
   "module": "./dist/crypto.es.js",
-  "exports": { 
-    ".": { 
-        "import": "./dist/crypto.es.js",
-        "require": "./dist/crypto.umd.js"
-    } 
+  "exports": {
+    ".": {
+      "import": "./dist/crypto.es.js",
+      "require": "./dist/crypto.umd.js"
+    }
   },
   "type": "module",
   "author": "wangqs",
@@ -24,8 +24,8 @@
     "start": "yarn build && vite",
     "cp": "mkdir viewKit && cp -r ./dist ./viewKit/ &&cp -r ./index.html ./viewKit/",
     "preview": "yarn build && yarn cp",
-    "test": "echo \" -------run test---------- \"",
-    "release": "np --no-yarn --no-2fa --branch main"
+    "test": "jest",
+    "release": "yarn build && np --no-yarn --no-2fa --branch main"
   },
   "publishConfig": {
     "registry": "http://172.16.11.82:4873/"
@@ -34,7 +34,14 @@
     "vue": "^3.2.31"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
+    "@peculiar/webcrypto": "^1.3.3",
     "@vitejs/plugin-vue": "^2.3.0",
+    "babel-jest": "^27.5.1",
+    "jest": "^27.5.1",
+    "jsdom": "^19.0.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.0"
   }
