fix: np发布配置修改

--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "cp": "mkdir viewKit && cp -r ./dist ./viewKit/ &&cp -r ./index.html ./viewKit/",
     "preview": "yarn build && yarn cp",
     "test": "jest",
-    "release": "yarn build && np --no-2fa --branch main"
+    "release": "yarn build && np --no-2fa --branch main --message v%s",
+    "release:test": "yarn build && np --no-2fa --branch main --message v%s --no-git"
   },
   "publishConfig": {
     "registry": "http://172.16.11.82:4873/"
   },
   "np": {
-    "yarn": true
+    "yarn": false,
+    "contents": "dist"
   },
   "dependencies": {
     "vue": "^3.2.31"
