--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wyny/crypto",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "aes+rsa加解密工具",
   "main": "./dist/crypto.umd.js",
   "module": "./dist/crypto.es.js",
@@ -34,7 +34,9 @@
     "yarn": false,
     "contents": "dist"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "vue": "^3.2.31"
   },
