--- a/package.json
+++ b/package.json
@@ -24,15 +24,11 @@
     "cp": "mkdir viewKit && cp -r ./dist ./viewKit/ &&cp -r ./index.html ./viewKit/",
     "preview": "yarn build && yarn cp",
     "test": "jest",
-    "release": "yarn build && np --no-2fa --branch main --message v%s",
-    "release:test": "yarn build && np --no-2fa --branch main --message v%s --no-git"
+    "release": "yarn build && np --no-2fa --branch main --message v%s --contents=dist",
+    "release:test": "yarn build && np --no-2fa --branch main --message v%s --no-git "
   },
   "publishConfig": {
     "registry": "http://172.16.11.82:4873/"
-  },
-  "np": {
-    "yarn": false,
-    "contents": "dist"
   },
   "files": [
     "dist"
