--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wyny/crypto",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "aes+rsa加解密工具",
   "main": "./dist/crypto.umd.js",
   "module": "./dist/crypto.es.js",
@@ -24,7 +24,7 @@
     "cp": "mkdir viewKit && cp -r ./dist ./viewKit/ &&cp -r ./index.html ./viewKit/",
     "preview": "yarn build && yarn cp",
     "test": "jest",
-    "release": "yarn build && np --no-2fa --branch main --message v%s --contents=dist",
+    "release": "yarn build && np --no-2fa --branch main --message v%s",
     "release:test": "yarn build && np --no-2fa --branch main --message v%s --no-git "
   },
   "publishConfig": {
