--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "start": "vite",
     "cp": "mkdir -p viewKit && cp -r ./dist/ ./viewKit/ &&cp -r ./index.html ./viewKit/",
     "preview": "yarn build && yarn cp",
-    "test": "jest",
+    "test": "yarn build && jest",
     "release": "yarn build && np --no-2fa --branch main --message v%s",
     "release:test": "yarn build && np --no-2fa --branch main --message v%s --no-git "
   },
