--- a/package.json
+++ b/package.json
@@ -34,9 +34,7 @@
   "files": [
     "dist"
   ],
-  "dependencies": {
-    "vue": "^3.2.31"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
@@ -48,6 +46,7 @@
     "jsdom": "^19.0.0",
     "np": "^7.6.1",
     "typescript": "^4.6.3",
-    "vite": "^2.9.0"
+    "vite": "^2.9.0",
+    "vue": "3.2.31"
   }
 }
