fix: 支持ts打包容器预览版

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "baseUrl": ".",
     "jsx": "react",
     "allowSyntheticDefaultImports": true,
-    "moduleResolution": "Classic",
+    "moduleResolution": "node",
     "rootDirs": ["/lib", "./typings"],
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
@@ -31,5 +31,7 @@
     "node_modules",
     "build",
     "scripts",
+    "test",
+    "public",
   ]
 }
