--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "build": "vite build --mode admin",
     "build:offiaccount": "vite build --mode offiaccount",
-    "start": "vite",
+    "start": "vite --host",
     "cp": "mkdir -p viewKit && cp -r ./dist/ ./viewKit/ &&cp -r ./index.html ./viewKit/",
     "preview": "if [ -r dist/ ];then rm -r dist/;fi && yarn tsc && yarn cp",
     "test": "yarn build && jest",
