--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "preview": "if [ -r dist/ ];then rm -r dist/;fi && yarn tsc && yarn cp",
     "test": "yarn build && jest",
     "release": "yarn build && np --no-2fa --branch main --message v%s",
-    "release:test": "yarn build && np --no-2fa --branch main --message v%s --no-git "
+    "release:test": "yarn build && np --no-2fa --branch main --no-publish"
   },
   "publishConfig": {
     "registry": "http://172.16.11.82:4873/"
